--- a/journal/styles.css
+++ b/journal/styles.css
@@ -51,16 +51,16 @@ h1:hover {
     cursor: pointer;
 }
 
-div.cloud {
+/* div.cloud {
     background-image: url(../images/cloud.png) ;
     background-size: contain;
     background-repeat: no-repeat;
     width: 130px;
     height: 100px;
     position: relative;
-}
+} */
 
-div.cloud date {
+/* div.cloud date {
     position: absolute;
     font-family: "Roboto Mono";
     left: 28px;
@@ -68,10 +68,28 @@ div.cloud date {
     font-size: 14px;
     text-align: center;
     color: #454d58;
+} */
+
+
+date {
+    background-image: url(../images/cloud.png) ;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 130px;
+    height: 100px;
+    position: absolute;
+    font-family: "Roboto Mono";
+    top: -100px;
+    font-size: 14px;
+    text-align: center;
+    padding-top: 36px;
+    color: #454d58;
 }
 
 article {
-    margin-bottom: 60px;
+    margin-top: 140px;
+    margin-bottom: 140px;
+    position: relative;
 }
 
 div.content {
