--- a/studio1/styles.css
+++ b/studio1/styles.css
@@ -3,9 +3,11 @@ body {
     font-family: "Patrick Hand SC";
     font-size: 20px;
     color: #322019;
-    margin: 40px 80px;
+    margin: 40px auto;
     display: flex;
+    gap: 40px;
     letter-spacing: 0.5px;
+    max-width: 1200px;
 }
 
 header {
@@ -13,20 +15,21 @@ header {
     font-size: 48px;
     /* width: 100px; */
     text-align: center;
-    margin: 80px 100px 0px 50px;
+    margin: 150px 100px 0px 50px;
     transform: rotate(-12deg);
-    text-shadow: 4px 4px #BFAEA7;
+    text-shadow: 4px 4px #c9bab3;
 }
 
 main {
-    background-color: #BFAEA7;
+    /* background-color: #BFAEA7; */
+    background-color: #bcada6;
     width: 500px;
     height: 530px;
     padding: 30px 40px 40px 40px;
     border-radius: 20px;
 }
 
-main p {
+main h3 {
     margin-top: 0;
     margin-bottom: 24px;
     font-size: 30px;
@@ -66,12 +69,44 @@ input[type="text"]:focus, select:focus, input[type="submit"]:focus {
 img#matcha {
     animation: wiggle1 2s ease-in-out infinite;
     margin: 12px;
+    position: absolute;
+    top: 200px;
+    left: -80px;
 }
 
 img#pizza {
     animation: wiggle2 2s ease-in-out infinite;
     margin: 12px;
+    position: absolute;
+    top: 240px;
+    left: 300px;
 }
+
+img#icecream {
+    animation: wiggle1 2s ease-in-out infinite;
+    margin: 12px;
+    position: absolute;
+    top: -110px;
+    left: 370px;
+}
+
+img#noodles {
+    animation: wiggle2 2s ease-in-out infinite;
+    margin: 12px;
+    position: absolute;
+    top: 360px;
+    left: 120px;
+
+}
+
+img#egg {
+    animation: wiggle2 2s ease-in-out infinite;
+    margin: 12px;
+    position: absolute;
+    top: -120px;
+    left: 20px;
+}
+
 
 @keyframes wiggle1 {
     0% {transform: rotate(0deg);}
@@ -87,4 +122,22 @@ img#pizza {
     50% {transform: rotate(-20deg);}
     /* 75% {transform: rotate(-10deg);} */
     100% {transform: rotate(0deg)}
+}
+
+.hidden {
+    display: none;
+}
+
+.showing {
+    display: block;
+}
+
+#madlib {
+    font-size: 24px;
+    line-height: 30px;
+}
+
+#madlib span {
+    color: #FFF5F0;
+    text-decoration: underline;
 }
