--- a/journal/styles.css
+++ b/journal/styles.css
@@ -107,3 +107,24 @@ a {
     text-decoration: none;
     color: rgb(255, 166, 0);
 }
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+div.images {
+    display: flex;
+    gap: 16px;
+}
+
+figure {
+    margin: 0;
+}
+
+figcaption {
+    font-size: 14px;
+    margin-top: 8px;
+    font-style: italic;
+}
