--- a/studio3/styles.css
+++ b/studio3/styles.css
@@ -124,3 +124,21 @@ label {
     position: absolute;
     bottom: 80px;
 }
+
+footer {
+    display: flex;
+    gap: 20px;
+    text-align: center;
+    letter-spacing: 2px;
+    position: absolute;
+    bottom: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: #222;
+}
+
+a:hover {
+    color:#FFFDF9
+}
