--- a/final/styles.css
+++ b/final/styles.css
@@ -75,6 +75,10 @@ main {
     height: 3700px;
 }
 
+main#usertest {
+    height: 1200px;
+}
+
 main h2 {
     font-family: "Roboto Mono";
     letter-spacing: 0.5px;
